Opened 3 years ago
Closed 3 years ago
#17302 closed bug (fixed)
[regression] usb_keyboard kernel add-on blocks correct display of KDL
Reported by: | X512 | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Drivers/USB | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev55465.
Only small empty white rectangle is displayed in case of KDL if usb_keyboard kernel add-on is loaded.
Change History (3)
comment:1 by , 3 years ago
Cc: | removed |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:2 by , 3 years ago
Do you know what hrev this last worked on? (Does it work when entering KDL via the shortcut on a USB keyboard?)
Note:
See TracTickets
for help on using tickets.
I did make a change to the KDL path in the USB stack recently, adding this assert: https://xref.landonf.org/source/xref/haiku/src/add-ons/kernel/bus_managers/usb/Stack.cpp#241
However it should always be "true", so I'm not sure what the problem is...